# objectgraph

./: .appveyor.yml  .hgignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  ReadMe.rst  azure-pipelines.yml  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish-to-test-pypi.yml  release_to_pypi.yml  test.yml
doc/: changelog.rst  conf.py  development.rst  examples.rst  index.rst  license.rst  objectgraph.rst  requirements.txt
objectgraph/: __init__.py  _objectgraph.py
testsuite/: test_api.py  test_objectgraph.py
