[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "objectgraph"
author = "Ronald Oussoren"
author-email = "ronaldoussoren@mac.com"
home-page = "https://objectgraph.readthedocs.io/"
description-file = "ReadMe.rst"
requires = [
    "typing_extensions",
]
requires-python = ">=3.6,<4"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]
license="MIT"

[tool.flit.metadata.urls]
"Documentation" = "https://objectgraph.readthedocs.io/"
"Source Code" = "https://github.com/ronaldoussoren/objectgraph/"
"Issue Tracker" = "https://github.com/ronaldoussoren/objectgraph/issues"
"Supporting" = "https://blog.ronaldoussoren.net/support/"
