[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "objectgraph"
description = "A basic graph library"
dynamic = ["version"]
authors = [
    {name = "Ronald Oussoren", email = "ronaldoussoren@mac.com"},
]
home-page = "https://objectgraph.readthedocs.io/"
readme = "ReadMe.rst"
requires = [
    "typing_extensions",
]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
]
license="MIT"
license-files=["doc/license.rst"]

[project.urls]
"Documentation" = "https://objectgraph.readthedocs.io/"
"Source Code" = "https://github.com/ronaldoussoren/objectgraph/"
"Issue Tracker" = "https://github.com/ronaldoussoren/objectgraph/issues"
"Supporting" = "https://blog.ronaldoussoren.net/support/"
